--- a/index.html
+++ b/index.html
@@ -1,2 +1,14 @@
 # YohanesRafelius.github.io
-Exercise 02
+<!DOCTYPE html>
+<html>
+
+<head>
+<title>Yohanes Rafelius</title>
+</head>
+
+<body>
+<h1>Yohanes Rafelius</h1>
+<h2>s1133538</h2>
+</body>
+
+</html>
